added DoWhile statement, all tests in prepwork.variable* green